# vello-ios

./: .gitignore  Cargo.toml  README.md
IOS/Vello-IOS-Demo.xcodeproj/: project.pbxproj
IOS/Vello-IOS-Demo.xcodeproj/project.xcworkspace/xcuserdata/vidy.xcuserdatad/: UserInterfaceState.xcuserstate
IOS/Vello-IOS-Demo.xcodeproj/xcuserdata/vidy.xcuserdatad/xcschemes/: xcschememanagement.plist
IOS/VelloDemo/: ContentView.swift  Item.swift  MetalView.swift  MetalViewController.swift  VelloDemo-Bridging-Header.h  VelloDemoApp.swift  vello.h
IOS/VelloDemo.xcodeproj/: project.pbxproj
IOS/VelloDemo.xcodeproj/project.xcworkspace/xcuserdata/vidy.xcuserdatad/: UserInterfaceState.xcuserstate
IOS/VelloDemo.xcodeproj/xcshareddata/xcschemes/: VelloDemo.xcscheme
IOS/VelloDemo.xcodeproj/xcuserdata/vidy.xcuserdatad/xcschemes/: xcschememanagement.plist
rust/: Cargo.toml
rust/src/: lib.rs
src/: lib.rs
