[package]
name = "vello_ios"
version = "0.1.0"
authors = ["Vidy Videni <vidyvideni@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
app-surface= { path = "../../wgpu-in-app/app-surface"}
# app-surface= { git="https://github.com/videni/wgpu-in-app"}
libc = "0.2.169"
vello = { git="https://github.com/linebender/vello", branch="main" }
scenes= { git="https://github.com/linebender/vello", branch="main" }
# vello= { path = "../../vello"}
# scenes= { path = "../../vello"}
objc = "0.2.7"
anyhow = "1.0.95"
